Привести в соответствие с замечаниями: - использовать Spring Data JDBC вместо JpaRepository; - вынести метод getPreview (класса PostServiceImplements) в Interface; - объединить дублирующийся код в классе PostServiceImplements в отдельный приватный метод (создан с названием buildPostDtoResponseShort)